<?xml version="1.0"?>
<package format="2">
  <name>wm_mecanum_gazebo_plugin</name>
  <version>0.0.1</version>
  <description>Plugin which uses directional friction to simulate mecanum wheels.</description>

  <maintainer email="thierrypouplier@gmail.com">Thierry Pouplier</maintainer>
  <author>Mike Purvis</author>

  <license>BSD</license>

  <!--<url type="website">http://wiki.ros.org/wm_mecanum_gazebo_plugin</url>-->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <depend>gazebo</depend>
  <depend>rosconsole</depend>
</package>
